<resources>

    <string name="app_name">KanColleTimer SuperLite</string>
    <string name="gcm_sender_id">424903963924</string>
    <string name="fleet_2">Fleet 2</string>
    <string name="fleet_3">Fleet 3</string>
    <string name="fleet_4">Fleet 4</string>
    <string name="dock_1">Dock 1</string>
    <string name="dock_2">Dock 2</string>
    <string name="dock_3">Dock 3</string>
    <string name="dock_4">Dock 4</string>
    <string name="set">Set</string>
    <string name="expedition">Expedition</string>
    <string name="repair">Repair</string>
    <string name="docking">Docking</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="announce_gcm">Timer Synchronization with KanColle Timer for Firefox via Google Cloud Messaging.</string>
    <string name="sync_timer_setting">Sync Setting</string>
    <string name="register">Register</string>
    <string name="announce_gcm2">Please enter your Key 1 and Key 2 to KanColle Timer for Firefox after registration.</string>
    <string name="username">Key 1</string>
    <string name="passcode">Key 2</string>
    <string name="registered">Register successful</string>
    <string name="failed_to_register">Failed to Register</string>
    <string name="notification">Notification</string>
    <string name="notify_sound">Sound</string>
    <string name="notify_sound_summary">Notify by Sound</string>
    <string name="notify_vibration">Vibration</string>
    <string name="notify_vibration_summary">Notify by Vibratiion</string>
    <string name="notify_light">Light</string>
    <string name="notify_light_summary">Notify by Lights</string>
    <string name="caution_message">If Key 1 and Key 2 are same with other users, last registered user is preferred.</string>
    <string name="cancel">Cancel</string>
    
</resources>