<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context="jp.miku39.android.kancolletimerlite.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expedition" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:columnCount="3"
        android:rowCount="3" >

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginRight="16dp"
            android:layout_row="0"
            android:text="@string/fleet_2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_gravity="left"
            android:layout_marginRight="16dp"
            android:text="00:00:00" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="left"
            android:text="@string/set" />

        <TextView
            android:id="@+id/textView4"
            android:layout_gravity="left"
            android:text="@string/fleet_3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_gravity="left"
            android:text="00:00:00" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="left"
            android:text="@string/set" />

        <TextView
            android:id="@+id/textView6"
            android:layout_gravity="left"
            android:text="@string/fleet_4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_gravity="left"
            android:text="00:00:00" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="left"
            android:text="@string/set" />
    </GridLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/docking" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:columnCount="3"
        android:rowCount="4" >

        <TextView
            android:id="@+id/textView8"
            android:layout_gravity="left"
            android:layout_marginRight="16dp"
            android:text="@string/dock_1" />

        <TextView
            android:id="@+id/textView9"
            android:layout_gravity="left"
            android:layout_marginRight="16dp"
            android:text="00:00:00" />

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="left"
            android:text="@string/set" />

        <TextView
            android:id="@+id/textView10"
            android:layout_gravity="left"
            android:text="@string/dock_2" />

        <TextView
            android:id="@+id/textView11"
            android:layout_gravity="left"
            android:text="00:00:00" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="left"
            android:text="@string/set" />

        <TextView
            android:id="@+id/textView12"
            android:layout_gravity="left"
            android:text="@string/dock_3" />

        <TextView
            android:id="@+id/textView13"
            android:layout_gravity="left"
            android:text="00:00:00" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="left"
            android:text="@string/set" />

        <TextView
            android:id="@+id/textView14"
            android:layout_gravity="left"
            android:text="@string/dock_4" />

        <TextView
            android:id="@+id/textView15"
            android:layout_gravity="left"
            android:text="00:00:00" />

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonStyleSmall"
            android:layout_gravity="left"
            android:text="@string/set" />
    </GridLayout>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test" />

</LinearLayout>