<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginRight="8dp"
        android:layout_row="0"
        android:text="@string/fleet_2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:text="@string/fleet_3" />
    <TextView
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/fleet_4" />

    <TextView
        android:id="@+id/tv_fleet_2_remain_widget"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="00:00:00" />

    <TextView
        android:id="@+id/tv_fleet_3_remain_widget"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:text="00:00:00" />

    <TextView
        android:id="@+id/tv_fleet_4_remain_widget"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="00:00:00" />
    
</GridLayout>